<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.chatwithfirebase.data.model.User" />

        <variable
            name="settingViewModel"
            type="com.example.chatwithfirebase.ui.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.setting.SettingActivity">

        <RelativeLayout
            android:id="@+id/rlLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:background="@drawable/bg_gradient"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/ic_arrow_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/ProductSansBold.TextColorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/setting"
                android:textAllCaps="true"
                android:textSize="@dimen/_16sdp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAvatar"
                imageUrl="@{user.avatarUser}"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@id/imgBack"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:src="@drawable/ic_logo_no_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFullName"
                style="@style/ProductSansBold.TextColorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgBack"
                android:hint="@string/full_name"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_36sdp"
                android:layout_toRightOf="@id/imgAvatar"
                android:text="@{user.fullName}"
                android:textSize="@dimen/_16sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                style="@style/ProductSansRegular.TextColorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFullName"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_toRightOf="@id/imgAvatar"
                android:text="@{user.email}"
                android:hint="@string/email"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgEdit"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_below="@id/imgBack"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_36sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:src="@drawable/feather_edit" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlNotification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgNotification"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/circle_bell"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvNotification"
                style="@style/ProductSansRegular.TextColorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_toRightOf="@id/imgNotification"
                android:text="@string/notifications"
                android:textSize="@dimen/_16sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgOpenNotification"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_back" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlNotification">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLogout"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/logout"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogout"
                style="@style/ProductSansRegular.TextColorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_toRightOf="@id/imgLogout"
                android:text="@string/logout"
                android:textSize="@dimen/_16sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLogoutUser"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_back" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>